syntax = "proto3";

package Neuro.Recording;

import "Utilities/MyVector2.proto";

message PositionData {
    float TotalDistance = 1;
    Utilities.MyVector2 NextNodePosition = 2;
}
